--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/drawer": "^7.1.2",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.35",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
@@ -57,7 +58,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-torch": "^1.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
