--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@expo-google-fonts/public-sans": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
     "@fluentui/react-icons": "^2.0.292",
+    "@gorhom/bottom-sheet": "^5.1.4",
     "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.2",
@@ -58,8 +60,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-torch": "^1.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
