update(sdk): expo upgrade to 53

--- a/app.json
+++ b/app.json
@@ -17,7 +17,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/icons/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.CAMERA"
+      ],
+      "package": "com.anonymous.StockSmartMobile"
     },
     "web": {
       "bundler": "metro",
