--- a/package.json
+++ b/package.json
@@ -52,12 +52,15 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.12.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-torch": "^1.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
@@ -67,6 +70,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
