--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "expo-web-browser": "~14.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react-native": "^0.483.0",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-circular-progress": "^1.4.1",
