--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-skeleton-content": "^1.0.28",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.12.0",
     "react-native-swiper": "^1.6.0",
